--- a/RandomForest_Iris.ipynb
+++ b/RandomForest_Iris.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8418e578-2164-4982-ad0b-d21e3bc2afc7",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1a2f4c7a-c999-44fa-9ec6-b7e30ea4c969",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fe11f04c-9b70-4f52-b89b-633920e03bf0",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3e0989f2-bd62-487f-af37-e14c17000da0",
    "metadata": {},
    "outputs": [
@@ -166,18 +166,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d20bb1a6-659d-453e-b594-a603f2708dd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.843333</td>\n",
+       "      <td>3.057333</td>\n",
+       "      <td>3.758000</td>\n",
+       "      <td>1.199333</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.828066</td>\n",
+       "      <td>0.435866</td>\n",
+       "      <td>1.765298</td>\n",
+       "      <td>0.762238</td>\n",
+       "      <td>0.819232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>1.300000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sepal length (cm)  sepal width (cm)  petal length (cm)  \\\n",
+       "count         150.000000        150.000000         150.000000   \n",
+       "mean            5.843333          3.057333           3.758000   \n",
+       "std             0.828066          0.435866           1.765298   \n",
+       "min             4.300000          2.000000           1.000000   \n",
+       "25%             5.100000          2.800000           1.600000   \n",
+       "50%             5.800000          3.000000           4.350000   \n",
+       "75%             6.400000          3.300000           5.100000   \n",
+       "max             7.900000          4.400000           6.900000   \n",
+       "\n",
+       "       petal width (cm)      target  \n",
+       "count        150.000000  150.000000  \n",
+       "mean           1.199333    1.000000  \n",
+       "std            0.762238    0.819232  \n",
+       "min            0.100000    0.000000  \n",
+       "25%            0.300000    0.000000  \n",
+       "50%            1.300000    1.000000  \n",
+       "75%            1.800000    2.000000  \n",
+       "max            2.500000    2.000000  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.describe()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "294ca32f-d117-4d34-b6f3-a7c97c6ea226",
+   "metadata": {},
+   "source": [
+    "# Step 2 — Split into train & test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f7213d27-e698-460b-b88f-46523cbe6191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "75041a13-dd78-4aad-97f3-69121c69bf32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Features (X), Target(y)\n",
+    "X= df.drop(columns=['target'])\n",
+    "y= df['target']\n",
+    "\n",
+    "# Train-test split (80% training, 20% testing)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9749b4ba-4567-4d21-aace-9829b2faf73c",
+   "metadata": {},
+   "source": [
+    "# Step 3 – Train the Random Forest (default params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4a76ef8d-4ef2-43eb-832c-59a1fdd18308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "#initialize the model\n",
+    "rf_model= RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "#train the model\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "#predictions\n",
+    "y_pred = rf_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05bb42de-a427-4d3d-940c-acfd15c1d05a",
+   "metadata": {},
+   "source": [
+    "# Step 4 – Evaluate Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "254f4a65-832b-4e51-a4f9-6e46e9a5cf01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0000\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        10\n",
+      "           1       1.00      1.00      1.00         9\n",
+      "           2       1.00      1.00      1.00        11\n",
+      "\n",
+      "    accuracy                           1.00        30\n",
+      "   macro avg       1.00      1.00      1.00        30\n",
+      "weighted avg       1.00      1.00      1.00        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_score(y_test,y_pred)\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "\n",
+    "# Detailed classification report\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da2cf2e",
+   "id": "46f41b26-e22d-4591-84dc-5baa912f0cfc",
    "metadata": {},
    "outputs": [],
    "source": []
